--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
 
 
                     <div class="sign-with-box mt-2 ">
+                        <img src="./images/face-book.png" alt="">
                         <span class="fx-14 text-black">Sign up with Facebook</span>
                     </div>
                     <div class="sign-with-box mt-2">
@@ -104,7 +105,7 @@
    
     <section class="sign-in-page-section">
         <div class="sign-up-page w-100 mw-736">
-            <img src="./images/a.jpg" alt="">
+            
             <div class="sign-hed desk-show">
                 <h6 class="fx-14 gr ">Let's learn, share & inspire each other with our passion for computer engineering. Sign up now 🤘🏼</h6>
             </div>
